@@ -1,7 +1,6 @@
 {{ define "content" }}
 <nav class="breadcrumb" aria-label="breadcrumbs">
   <ul>
-    <li><a href="/">Home</a></li>
     <li><a href="/decks/">Decks</a></li>
     <li class="is-active"><a href="#" aria-current="page">{{ .Name }}</a></li>
   </ul>
