@@ -1,10 +1,4 @@
 {{ define "content" }}
-  <nav class="breadcrumb" aria-label="breadcrumbs">
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li class="is-active"><a href="#" aria-current="page">Decks</a></li>
-		</ul>
-	</nav>
   <h1 class="title">Decks</h1>
   <div class="columns">
     {{ range . }}
