@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>{{ .Title }} - CyberBrain</title>
+		<title>{{ .Title }} - CyberBrain.app</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/main.js" charset="utf-8"></script>
@@ -11,7 +11,7 @@
 	<body>
 		<nav class="navbar is-transparent container">
 			<div class="navbar-brand">
-        <a class="navbar-item" href="/">CyberBrain</a>
+        <a class="navbar-item" href="/">CyberBrain.app</a>
 				<div class="navbar-burger burger" data-target="navbar-top-menu">
 					<span></span> <span></span> <span></span>
 				</div>
