@@ -1,4 +1,12 @@
 {{ define "content"}}
+<nav class="breadcrumb" aria-label="breadcrumbs">
+  <ul>
+    <li><a href="/decks/">Decks</a></li>
+    <li><a href="{{ .Path }}">{{ .Name }}</a></li>
+    <li class="is-active"><a href="#" aria-current="page">New Practice</a></li>
+  </ul>
+</nav>
+
 <form action="{{ .CreatePracticePath }}" method="post" accept-charset="utf-8">
   <input type="hidden" name="deck" id="deck" value="{{ .ID }}" />
   <h1 class="title">Practice</h1>
